<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".vistas.ResumenCalificacion"
    tools:showIn="@layout/activity_resumen_calificacion">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/fondo" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="#d8000000">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="184dp"
            android:text="@string/preguntas"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="48dp"
            android:text="@string/categorias"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="189dp"
            android:layout_height="26dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="32dp"
            android:text="@string/cuestionarios"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="189dp"
            android:layout_height="27dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="44dp"
            android:text="@string/calificacion"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/preguntasDisponibles"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="184dp"
            android:text="0"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/categoriasDisponibles"
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="48dp"
            android:text="0"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/preguntasDisponibles" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="13dp"
            android:layout_height="26dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="32dp"
            android:text="0"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/categoriasDisponibles" />

        <TextView
            android:id="@+id/tv4"
            android:layout_width="14dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="48dp"
            android:text="0"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/tv3" />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="76dp"
            android:text="@string/resumen"
            android:textColor="#ffffff"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>






</RelativeLayout>